--- a/client/style.css
+++ b/client/style.css
@@ -11,6 +11,17 @@ body {
   background: #343541;
 }
 
+h1
+{
+  color: #00fff7;
+  font-size: 1.4rem;
+  text-decoration: underline;
+  text-decoration-style: wavy;
+  text-decoration-color: rgb(0, 0, 0);
+  text-shadow: #000000;
+  margin-left: 1rem;
+}
+
 #app {
   width: 100vw;
   height: 100vh;
@@ -69,7 +80,7 @@ body {
   height: 36px;
   border-radius: 5px;
 
-  background: #00ff11;
+  background: #00ff1100;
 
   display: flex;
   justify-content: center;
@@ -77,7 +88,7 @@ body {
 }
 
 .ai .profile {
-  background: #6d006d;
+  background: #6d006d00;
 }
 
 .profile img {
@@ -158,7 +169,6 @@ footer {
 .navbar {
   background: transparent;
   display: flex;
-  justify-content: space-around;
   align-items: center;
 }
 
