--- a/client/style.css
+++ b/client/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: #343541;
+  background: #333443;
 }
 
 h1
@@ -25,7 +25,7 @@ h1
 #app {
   width: 100vw;
   height: 100vh;
-  background: #343541;
+  background: #333443;
 
   display: flex;
   flex-direction: column;
@@ -61,7 +61,7 @@ h1
 }
 
 .ai {
-  background: #343656;
+  background: #424469;
 }
 
 .chat {
@@ -127,7 +127,7 @@ form {
   max-width: 1280px;
   margin: 0 auto;
   padding: 10px;
-  background: #3f404a;
+  background: #474851;
 
   display: flex;
   flex-direction: row;
@@ -136,10 +136,8 @@ form {
 
 textarea {
   width: 100%;
-
-  color: #eeeeee;
+  color: #ffffff;
   font-size: 18px;
-
   padding: 10px;
   background: transparent;
   border-radius: 5px;
@@ -168,7 +166,7 @@ footer {
 /*Navbar*/
 .navbar {
   background: transparent;
-  display: flex;
+  display: inline-flex;
   align-items: center;
 }
 
@@ -185,7 +183,7 @@ footer {
 }
 
 .navbar a {
-  color: #e692ff;
+  color: #e48dff;
   text-decoration: underline;
   font-size: 1.3rem;
 }
